--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "tiktok-vercel-api",
+  "name": "tiktok-profile-fetcher",
   "version": "1.0.0",
   "type": "module",
-  "dependencies": {
-    "axios": "^1.7.2",
-    "cheerio": "^1.0.0-rc.12"
-  }
+  "dependencies": {}
 }
