--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tiktok-profile-fetcher",
   "version": "1.0.0",
+  "main": "index.html",
   "type": "module",
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^1.6.0"
+  }
 }
